# EvTrack

./: .gitignore  .gitmodules  AGENTS.md  README.md  opencode.json  requirements.txt  skills-lock.json
EvTrack/code/SDSTrack/: PLAN.md  README.md  REPRODUCTION_REPORT.md  SDSTrack_VisEvent_eval.ipynb  main.py  pyproject.toml
EvTrack/code/SDSTrack/docs/: dataset-mount.md
EvTrack/code/SDSTrack/scripts/: patch_colab_compat.py
added code/: README.md  ostrack_prompt.py  vipt_online_template.py  vipt_single_template.py  vit_ce_prompt.py
code/: README.md
code/patches/: README.md  vipt_online_template.py  vipt_single_template.py  vit_ce_prompt.py
data/: README.md
docs/: Event-Based Vision.md  README.md  course-project-guide.md  dataset-setup.md  project-proposal.md
evaluation/: README.md
supermouse/: Event-Based Vision.md
